19990706-22:40 EDT David G. Holm <dholm@jsd-llc.com>
  * doc/hdr_tpl.txt
    - Removed "(C)" from Copyright notice
    + Put author's name rather than date
       next to each version number, because
       the RCS tracks dates, but only tracks
       CVS user names, not author names.
    + Added version comment for Victor Szel's change
  * source/compiler/fixflex.c
    + Placed under GPL
  * source/rtl/devoutp.prg
    - Removed "(C)" from Copyright
    * Updated previous version comments

19990707-03:48 CET Victor Szel <info@szelvesz.hu>
 * doc/hdr_tpl.txt
   * Description line changed to be a template, too.
 * source/rtl/natmsg/msghu.c
   tests/working/rtl_test.prg
   + Copyright notice added.

19990707-22:25:59 Bruno Cantero <bruno@issnet.net>
CVSed by Andi Jahja <andij@aonlippo.co.id>

source/rtl/extend.c
   * hb_parni
      - wArrayIndex use when retrieving an array element implemented
   * hb_parnl
      - wArrayIndex use when retrieving an array element implemented

19990706-16:30 Eddie Runia
  * source/rtl/asort.prg; source/rtl/objfunc.prg; source/runner/runner.c;
    source/tools/debug.c; source/tools/stringp.prg; source/rtl/transfrm.c
    Copyright assertions made.
  * source/rtl/strcmp.c; source/rtl/classes.c
    Partial copyright assertion made

19990706-20:15 Bruno Cantero <bruno@issnet.net>
CVSed by Andi Jahja <andij@aonlippo.co.id>

=> retrieve the logical value contained on an array element
=> retrieve the double value contained on an array element

source/rtl/arrays.c
  + internal hb_arrayGetBool
  + internal hb_arrayGetDouble
source/rtl/extend.c
  * hb_parnl
  * hb_parnd
include/extend.h
  + hb_arrayGetBool prototye
  + hb_arrayGetDouble prototype

19990705-14:10 Alexander Kresin
  * source\hbpp\hbpp.c
    * fixed some warnings
  * source\hbpp\table.c
    * fixed bugs in table, reported by David G. Holm

19990704-23:45 EDT David G. Holm <dholm@jsd-llc.com>
  * makefile.b16
    + Added devoutp
  * makefile.b31
    + Added devoutp
  * makefile.b32