@@ -1,6 +1,138 @@
-/*
- * $Id$
- */
+/* $Id$
+
+   Harbour Project source code
+
+   This module contains the Harbour functions for SET management.
+
+   Copyright 1999  David G. Holm
+   www - http://www.harbour-project.org
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2 of the License, or
+   (at your option) any later version, with one exception:
+
+   The exception is that if you link the Harbour Runtime Library (HRL)
+   and/or the Harbour Virtual Machine (HVM) with other files to produce
+   an executable, this does not by itself cause the resulting executable
+   to be covered by the GNU General Public License. Your use of that
+   executable is in no way restricted on account of linking the HRL
+   and/or HVM code into it.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA (or visit
+   their web site at http://www.gnu.org/).
+
+   V 1.40   David G. Holm               Added header template and filled in
+                                        complete version history by cross-
+                                        referencing ChangeLog and the output
+                                        from "cvs log source/rtl/set.c".
+   V 1.39   David G. Holm               Made various changes after running
+                                        through Gimpel Lint.
+                                        Added call hb_errorRT_TERMINAL()
+                                        wrapper function upon failure to
+                                        create an alternate file and/or a
+                                        printer file (and/or an extra file,
+                                        even though I still don't know what
+                                        it is used for).
+                                        Added support for HB_SET_EXTRAFILE.
+                                        Added support for strings > 64 KB.
+   V 1.38   Ryszard Glab                Changed to use the new definition of
+                                        HB_INIT_SYMBOLS_* and
+                                        HB_CALL_ON_STARTUP_* macros.
+   V 1.37   David G. Holm               Added #pragma startup.
+   V 1.36   Ryszard Glab                Changed code that registers local
+                                        symbol table (it uses HB_INIT_SYMBOLS_*
+                                        macros now).
+   V 1.35   Ryszard Glab                Changed to use the new HB_ITEM.
+                                        Changed to automatically register
+                                        symbol table.
+   V 1.34   Victor Sezl                 Added four Clipper-compatible error
+                                        reports.
+   V 1.33   Victor Sezl                 InitializeSets() changed to
+                                        hb_setInitialize() and ReleaseSets()
+                                        changed to hb_setRelease().
+   V 1.32   David G. Holm               Minor change in last if block in
+                                        HB___SETCENTURY() to avoid a
+                                        signed/unsigned comparison complaint
+                                        by some compilers.
+   V 1.31   Ryszard Glab                Files created by SET PRINTER TO or SET
+                                        ALTERNATE TO now have permissions set
+                                        to write/read by user on UNIX like OS.
+   V 1.30   Ryszard Glab                Changes for Watcom C/C++ and for GCC on
+                                        Linux. Removed PATH_SEPARATOR and
+                                        replaced it with OS_PATH_DELIMITER
+                                        defined in hbsetup.h.
+   V 1.29   David G. Holm               Added documentation. Converted
+                                        HB_SET_DEBUG to numeric. Added limits
+                                        of 16 and 4096 to HB_SET_TYPEAHEAD.
+   V 1.28   Eddie Runia                 Changed SETCENTURY in Symbol table to
+                                        __SETCENTURY.
+   V 1.27   David G. Holm               Renamed HB_SETCENTURY to
+                                        HB___SETCENTURY and eliminated
+                                        HB_SETFIXED following integration of
+                                        Harbour preprocessor.
+   V 1.26   David G. Holm               All Extend API functions converted from
+                                        _name() to hb_name().
+   V 1.25   David G. Holm               Convert all _errFunctions to
+                                        hb_errFunctions.
+   V 1.24   David G. Holm               Logical SET values can now use "ON"
+                                        for .T. and "OFF" for .F.
+   V 1.23   David G. Holm               Now uses hb_stricmp() instead of
+                                        stricmp(). Added default #define for
+                                        O_BINARY.
+   V 1.22   Eddie Runia                 Added InitSymbols().
+   V 1.21   Gonzalo A. Diethelm         Changed all HARBOUR NAME( void ) to
+                                        HARBOUR HB_NAME( void ).
+   V 1.20   David G. Holm               Removed "+ 1" in setting y_stop to
+                                        default stop point, because it caused
+                                        _xgrab to allocate 1 byte too few when
+                                        year was at end.
+   V 1.19   David G. Holm               Moved "#include <sys/stat.h>" outside
+                                        "#if defined(__GCC__) ||
+                                        defined(__DJGPP__)" block, so that it
+                                        is included for all compilers.
+   V 1.18   Gonzalo A. Diethelm         In open_handle(), a misplaced
+                                        parenthesis when calling open() caused
+                                        S_IWRITE to never be seen by open().
+   V 1.17   Eddie Runia                 temporary patches with regard to
+                                        sys/stat.h removed.
+   V 1.16   Gonzalo A. Diethelm         Solved portability problems under gcc.
+                                        Got rid of a few warnings and unused
+                                        variables.
+   V 1.15   Patrick Mast                Removed #include <sys\stat.h>
+   V 1.14   David G. Holm               Added #include <unistd.h> for DJGPP.
+   V 1.13   David G. Holm               Changed PITEM to PHB_ITEM.
+   V 1.12   Les. Griffith               Added #include <errno.h> for DJGPP.
+   V 1.11   Eddie Runia                 Small correction in ReleaseSets().
+   V 1.10   David G. Holm               Added default of "PRN" for
+                                        HB_SET_PRINTFILE. If SET (_SET_DEVICE,
+                                        "PRINTER") called and printer file not
+                                        open, then open it.
+   V 1.9    David G. Holm               Added file open/close support to
+                                        HB_SET_ALTFILE and HB_SET_PRINTFILE.
+   V 1.8    David G. Holm               Added hb_set_fixed and HB_SETFIXED().
+   V 1.7    David G. Holm               Fixed memory leak in HB_SETCENTURY.
+   V 1.6    Eddie Runia                 Calling IS_STRING and IS_LOGICAL
+                                        without checking for empty pItem fixed.
+   V 1.5    Ryszard Glab                Added (char *) type casts for Watcom C.
+   V 1.4    Gonzalo A. Diethelm         Cleaned up a few warnings.
+   V 1.3    David G. Holm               Changed __SETCENTURY to HB_SETCENTURY.
+                                        Changed all _SET_name to HB_SET_name
+                                        Changed HB_SETCENTURY to modify the
+                                        HB_SET_DATEFORMAT. Changed the name of
+                                        the set initialization function to
+                                        InitializeSets().
+   V 1.2    Gonzalo A. Diethelm         Added comment with CVS Id keyword.
+   V 1.1    Antonio Linares             Committed to CVS.
+   V 1.0    David G. Holm               Initial version.
+*/
 
 #if defined(__GNUC__)
  #include <unistd.h>
